--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="google-site-verification" content="h0te96nouJn4cntcWC50e7TQ5cx44rHiTMJnpGrHcPU" />
+<meta name="description" content=" لتحليل الطقس بالتفصيل التام مع سهولة الاستخدام"/>
+    <meta name="keyword" content="الطقس, تحليل الطقس, الجو, wether/>
     
     <title>تحليل الطقس</title>
     <style>
